--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-story-of-the-Iliad_74231
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74231-h/images/img-cover.jpg
 creator:
   authors:
   - agent_name: Church, Alfred John
@@ -19,6 +22,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/705
     wikipedia: https://en.wikipedia.org/wiki/Homer
 description: Edited for school use.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74231#The-story-of-the-Iliad
 gutenberg_issued: '2024-08-12'
 gutenberg_type: Text
 identifiers:
